# solsafe

./: .env.example  .gitignore  ADDITIONAL_VULNERABILITIES.md  ARCHITECTURE.md  App.css  BLOCKCHAIN_INTEGRATION.md  COMMANDS.md  CRITICAL_SECURITY_FIXES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dashboard.js  FIXES_APPLIED.md  IPFS_SETUP.md  MOBILE_LANDING_PAGE_UPDATE.md  README.md  RECENT_UPDATES.md  SECURITY_AUDIT.md  SETUP_TESTING.md  SUMMARY.md  VOTING_IMPLEMENTATION.md  WALLET_SIGNING_GUIDE.md  WHITEPAPER.md  ZK_DEPLOYMENT_CHECKLIST.md  ZK_IMPLEMENTATION_STATUS.md  ZK_PROOFS_GUIDE.md  ZK_PROOF_TYPE.md  ZK_TRACING_METHODOLOGY.md  apply_fixes.ps1  check-config-fixed.js  check-config.js  fix_zk_modules.ps1  init.sh  initialize_devnet.py  package-lock.json  package.json  playground-client.js  playground-direct.js  quickstart.bat  resolve-and-push.bat  solana-playground-test-fixed.js  (+10 more)
backend/: .env.example  README.md  api-server.ts  generate-keypair.ts  (+9 more)
solsafe-program/programs/solsafe-program/: Cargo-zk.toml  Cargo.toml
solsafe-program/programs/solsafe-program/src/: lib.rs  lib.rs.old  quantum_resistant.rs  state.rs  state.rs.old
solsafe-program/programs/solsafe-program/src/instructions/: initialize.rs  mod.rs  request_jurors.rs  request_jurors.rs.backup  select_jurors.rs  select_jurors.rs.backup  submit_evidence.rs  sync_validators.rs  update_validators.rs  vote.rs
solsafe-program/programs/solsafe-program/src/zk_proofs/: arcium_mpc.rs  dust_confidential.rs  evidence_verification.rs  groth16_verifier.rs  light_compression.rs  mod.rs  mod.rs.backup  private_vote.rs
(+65 files in other folders)
