[package]
name = "solsafe-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
switchboard-solana = "0.30.4"

# ZK-SNARK dependencies (Groth16 on BN254)
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
bytemuck = "1.14"

# Post-quantum cryptography (NIST-approved)
sha3 = "0.10"  # SHA3-256 for quantum-resistant hashing
bs58 = "0.5"   # Base58 encoding for signatures
